Updated Form & Contact Number

--- a/public/carrer.html
+++ b/public/carrer.html
@@ -256,8 +256,8 @@
                   <i class="fal fa-phone-alt"></i>
                 </div>
                 <div class="txt">
-                  <span>9953926020, </span>
-                  <span>8220888848</span>
+                  <span>9599598301, </span>
+                  <span>0124-4376471</span>
                 </div>
               </div>
             </div>
