--- a/public/cloud.html
+++ b/public/cloud.html
@@ -45,8 +45,8 @@
                 <div class="header">
                     <a class="logo d-lg-none" href="index.html"><img src="logo.png" alt="" srcset=""></a>
                     <a href="#" class="d-lg-none" id="showsidenav"><img src="img/icon/letter-x.png" alt=""> </a>
-                    </div>
-                    <ul class="mb-0">
+                </div>
+                <ul class="mb-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
@@ -81,7 +81,7 @@
 
     <!-- ========================================== PAGE CONTENT ========================================== -->
 
-    
+
 
     <!-- ======================================== Services SECTION ======================================== -->
 
@@ -221,24 +221,21 @@
                     src="https://cdn.icon-icons.com/icons2/2699/PNG/512/ibm_cloud_logo_icon_169999.png">
                 <img class="tickerlogo"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP7CUgCLkB8UTuNvlzjheeCKSc0A8PVwsROUM-3vzN&s">
-                <img class="tickerlogo"
-                    src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
+                <img class="tickerlogo" src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
                 <img class="tickerlogo"
                     src="https://www.element61.be/sites/default/files/img_competences/1280px-Microsoft_Azure_Logo.svg.png">
                 <img class="tickerlogo"
                     src="https://cdn.icon-icons.com/icons2/2699/PNG/512/ibm_cloud_logo_icon_169999.png">
                 <img class="tickerlogo"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP7CUgCLkB8UTuNvlzjheeCKSc0A8PVwsROUM-3vzN&s">
+                <img class="tickerlogo" src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
                 <img class="tickerlogo"
-                    src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
-                    <img class="tickerlogo"
                     src="https://www.element61.be/sites/default/files/img_competences/1280px-Microsoft_Azure_Logo.svg.png">
                 <img class="tickerlogo"
                     src="https://cdn.icon-icons.com/icons2/2699/PNG/512/ibm_cloud_logo_icon_169999.png">
                 <img class="tickerlogo"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP7CUgCLkB8UTuNvlzjheeCKSc0A8PVwsROUM-3vzN&s">
-                <img class="tickerlogo"
-                    src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
+                <img class="tickerlogo" src="https://cdn.worldvectorlogo.com/logos/amazon-web-services-1.svg">
             </div>
         </div>
 
@@ -283,7 +280,7 @@
                                 </div>
                                 <div class="txt">
                                     <span>Plot-269, Udyog Vihar Phase-4, Gurgaon, Haryana-122015</span>
-                                 </div>
+                                </div>
                             </div>
                             <div class="icon-box">
                                 <div class="icon">
@@ -307,8 +304,8 @@
                                     <i class="fal fa-phone-alt"></i>
                                 </div>
                                 <div class="txt">
-                                    <span>9953926020, </span>
-                                    <span>8220888848</span>
+                                    <span>9599598301, </span>
+                                    <span>0124-4376471</span>
                                 </div>
                             </div>
                         </div>
@@ -359,21 +356,21 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/custom.js"></script>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API = Tawk_API || {},
-      Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"),
-        s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
-      s1.charset = "UTF-8";
-      s1.setAttribute("crossorigin", "*");
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API = Tawk_API || {},
+                Tawk_LoadStart = new Date();
+            (function () {
+                var s1 = document.createElement("script"),
+                    s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
+                s1.charset = "UTF-8";
+                s1.setAttribute("crossorigin", "*");
+                s0.parentNode.insertBefore(s1, s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
 </body>
 
 </html>
