--- a/public/contact.html
+++ b/public/contact.html
@@ -137,13 +137,22 @@
                 <span>contact@iclimbs.com</span>
               </div>
             </div>
-            <div class="icon-box mb-0 wow fadeInLeftBig" data-wow-duration="1.5s">
+            <div class="icon-box mb wow fadeInLeftBig" data-wow-duration="1.5s">
               <div class="icon">
                 <i class="fal fa-phone-alt"></i>
               </div>
               <div class="txt">
-                <p>CALL NOW</p>
-                <span>9953926020, 7879350068, 8220888848</span>
+                <p>TALK TO SALES</p>
+                <span>9599598301</span>
+              </div>
+            </div>
+            <div class="icon-box mb wow fadeInLeftBig" data-wow-duration="1.5s">
+              <div class="icon">
+                <i class="fal fa-phone-alt"></i>
+              </div>
+              <div class="txt">
+                <p>TALK TO SUPPORT</p>
+                <span>0124-4376471</span>
               </div>
             </div>
           </div>
@@ -155,9 +164,9 @@
                 <input type="text" id="name" class="form-control" placeholder="Your Name" required />
               </div>
               <div class="form-group col-md-6">
-                <input type="email" id="email" class="form-control" placeholder="Email Address" required />
+                <input type="email" id="email" class="form-control" placeholder="Work Email" required />
               </div>
-              <div class="form-group col-md-6">
+              <!-- <div class="form-group col-md-6">
                 <select name="services" id="service" class="form-control" required>
                   <option value="">Our Services</option>
                   <option value="Web Development">Web Development</option>
@@ -171,17 +180,44 @@
                     Customized Software Solutions
                   </option>
                 </select>
-              </div>
+              </div> -->
 
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-12">
                 <input type="number" id="phone" class="form-control" placeholder="Phone Number" required />
               </div>
-              <div class="form-group col-md-12">
+              <!-- <div class="form-group col-md-12">
                 <input type="text" id="subject" class="form-control" placeholder="Subject" required />
+              </div> -->
+              <div class="form-group col-md-12">
+                <select name="services" id="service" class="form-control" required>
+                  <option value="">Select A Purpose</option>
+                  <option value="Web Development">Web Development</option>
+                  <option value="Mobile App Development">
+                    Mobile App Development
+                  </option>
+                  <option value="Digital Transformation">
+                    Digital Transformation
+                  </option>
+                  <option value="Customized Software Solutions">
+                    Customized Software Solutions
+                  </option>
+                  <option value="Cybersecurity">
+                    Cyber Security Services
+                  </option>
+                  <option value="">
+                    Microsoft Dynamics 365
+                  </option>
+                  <option value="">
+                    Microsoft 365
+                  </option>
+                  <option value="">
+                    Cloud Services
+                  </option>
+                </select>
               </div>
               <div class="form-group col-12">
-                <textarea class="form-control" id="message" rows="8" cols="80" placeholder="Write Message"
-                  required></textarea>
+                <textarea class="form-control" id="message" rows="8" cols="80"
+                  placeholder="I'm Interested in more about ..." required></textarea>
               </div>
             </div>
             <div class="g-recaptcha" data-sitekey="6LeOi-spAAAAAJ4xqrlJNOUjMnFqfesPLerzAM5Z"></div>
@@ -271,8 +307,8 @@
                 <i class="fal fa-phone-alt"></i>
               </div>
               <div class="txt">
-                <span>9953926020, </span>
-                <span>8220888848</span>
+                <span>9599598301, </span>
+                <span>0124-4376471</span>
               </div>
             </div>
           </div>
@@ -380,7 +416,7 @@
     });
   </script>
   <!-- CONTACT FORM SUBMISSION ENDING  -->
-  
+
 </body>
 
 </html>
