--- a/public/index.html
+++ b/public/index.html
@@ -1200,7 +1200,8 @@
                   <i class="fal fa-phone-alt"></i>
                 </div>
                 <div class="txt">
-                  <span>(0124) 4376471</span>
+                  <span>9599598301, </span>
+                  <span>0124-4376471</span>
                 </div>
               </div>
             </div>
