--- a/public/itservices.html
+++ b/public/itservices.html
@@ -45,15 +45,15 @@
             <div class="header">
                <a class="logo d-lg-none" href="index.html"><img src="logo.png" alt="" srcset=""></a>
                <a href="#" class="d-lg-none" id="showsidenav"><img src="img/icon/letter-x.png" alt=""> </a>
-               </div>
-               <ul class="mb-0">
+            </div>
+            <ul class="mb-0">
                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                <li class="nav-item"><a class="nav-link" href="carrer.html">Career</a></li>
-           </ul>
-       </div>
+            </ul>
+         </div>
          <div id="hamburger" class="d-lg-none">
             <img src="img/icon/menu.png" class="img01" alt="">
          </div>
@@ -97,13 +97,18 @@
                <div class="col col-text">
                   <div class="Aligner-item">
                      <h3 style="color: black;">IT Services</h3>
-                     <h5 style="color: #fb383b; font-weight: 200;">"Empowering Your Digital World, One Solution at a Time"
+                     <h5 style="color: #fb383b; font-weight: 200;">"Empowering Your Digital World, One Solution at a
+                        Time"
                      </h5>
-                     <p>iCLIMBS is your one-stop destination for comprehensive IT services, tailored to elevate your business
-                        operations to new heights. Our diverse range of offerings encompasses every aspect of Information
-                        Technology, ensuring that your technological needs are not just met, but exceeded with precision and
+                     <p>iCLIMBS is your one-stop destination for comprehensive IT services, tailored to elevate your
+                        business
+                        operations to new heights. Our diverse range of offerings encompasses every aspect of
+                        Information
+                        Technology, ensuring that your technological needs are not just met, but exceeded with precision
+                        and
                         innovation. From robust infrastructure solutions to cutting-edge software development, iCLIMBS
-                        provides a seamless integration of services designed to optimize efficiency, enhance security, and drive growth.
+                        provides a seamless integration of services designed to optimize efficiency, enhance security,
+                        and drive growth.
                      </p>
                   </div>
                </div>
@@ -174,13 +179,13 @@
             0% {
                transform: translateX(0);
             }
-   
+
             100% {
                /* 10rem for each logo x 6 logos total = -60rem */
                transform: translateX(-60rem);
             }
          }
-   
+
          .img-ticker {
             display: flex;
             margin-left: -1rem;
@@ -188,7 +193,7 @@
             animation: ticker-kf 10s linear infinite;
             align-items: center;
          }
-   
+
          .tickerlogo {
             width: 8rem;
             flex: none;
@@ -199,7 +204,7 @@
          }
       </style>
       <div style="overflow: hidden; width: 100%; margin-top: 60px; margin-bottom: 60px;">
-   
+
          <section id="specialFeature">
             <div class="container">
                <div class="row">
@@ -223,7 +228,7 @@
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png">
             <img class="tickerlogo"
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/2560px-Amazon_Web_Services_Logo.svg.png">
-   
+
             <!-- 2nd copy set of images -->
             <img class="tickerlogo"
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/2560px-MongoDB_Logo.svg.png">
@@ -235,7 +240,7 @@
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png">
             <img class="tickerlogo"
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/2560px-Amazon_Web_Services_Logo.svg.png">
-   
+
             <!-- 3rd copy set of images -->
             <img class="tickerlogo"
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/2560px-MongoDB_Logo.svg.png">
@@ -247,7 +252,7 @@
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png">
             <img class="tickerlogo"
                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/2560px-Amazon_Web_Services_Logo.svg.png">
-   
+
          </div>
       </div>
 
@@ -278,7 +283,7 @@
                         <li><a href="t&c.html">Terms & Conditions</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <!-- <li class="mb-0"><a href="#">Help</a></li> -->
-                    </ul>
+                     </ul>
                   </div>
                </div>
                <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
@@ -292,56 +297,56 @@
                            <div class="txt">
                               <span>Plot-269, Udyog Vihar Phase-4, Gurgaon, Haryana-122015</span>
                            </div>
-                     </div>
-                     <div class="icon-box">
-                        <div class="icon">
-                           <i class="fal fa-map-marker-alt"></i>
                         </div>
-                        <div class="txt">
-                           <span>Office No 05A116,43,Residency Road, Shanthala Nagar,Ashok Nagar,
-                              Bengaluru,Karnataka-560025</span>
+                        <div class="icon-box">
+                           <div class="icon">
+                              <i class="fal fa-map-marker-alt"></i>
+                           </div>
+                           <div class="txt">
+                              <span>Office No 05A116,43,Residency Road, Shanthala Nagar,Ashok Nagar,
+                                 Bengaluru,Karnataka-560025</span>
+                           </div>
                         </div>
-                     </div>
-                     <div class="icon-box">
-                        <div class="icon">
-                           <i class="fal fa-envelope"></i>
+                        <div class="icon-box">
+                           <div class="icon">
+                              <i class="fal fa-envelope"></i>
+                           </div>
+                           <div class="txt">
+                              <span>contact@iclimbs.com</span>
+                           </div>
                         </div>
-                        <div class="txt">
-                           <span>contact@iclimbs.com</span>
-                        </div>
-                     </div>
-                     <div class="icon-box mb-0">
-                        <div class="icon">
-                           <i class="fal fa-phone-alt"></i>
-                        </div>
-                        <div class="txt">
-                           <span>9953926020, </span>
-                           <span>8220888848</span>
+                        <div class="icon-box mb-0">
+                           <div class="icon">
+                              <i class="fal fa-phone-alt"></i>
+                           </div>
+                           <div class="txt">
+                              <span>9599598301, </span>
+                              <span>0124-4376471</span>
+                           </div>
                         </div>
                      </div>
                   </div>
+                  <div class="col-lg-3 col-md-6">
+                     <div class="footer-box box4">
+                        <p class="title">NEWSLETTER</p>
+                        <form>
+                           <div class="form-group">
+                              <input type="email" class="form-control" placeholder="Email Address">
+                           </div>
+                           <button type="submit" class="btn" name="button"><i class="fal fa-envelope"></i></button>
+                        </form>
+                        <span>Sign up for our latest news & articles. We won’t give you spam mails.</span>
+                     </div>
+                  </div>
                </div>
-               <div class="col-lg-3 col-md-6">
-                  <div class="footer-box box4">
-                     <p class="title">NEWSLETTER</p>
-                     <form>
-                        <div class="form-group">
-                           <input type="email" class="form-control" placeholder="Email Address">
-                        </div>
-                        <button type="submit" class="btn" name="button"><i class="fal fa-envelope"></i></button>
-                     </form>
-                     <span>Sign up for our latest news & articles. We won’t give you spam mails.</span>
+               <div class="copy-right">
+                  <div class="row">
+                     <div class="col">
+                        <span>Copyright © 2024 iclimbs. All rights reserved.</span>
+                     </div>
                   </div>
                </div>
             </div>
-            <div class="copy-right">
-               <div class="row">
-                  <div class="col">
-                     <span>Copyright © 2024 iclimbs. All rights reserved.</span>
-                  </div>
-               </div>
-            </div>
-         </div>
       </section>
 
 
@@ -367,21 +372,21 @@
       <script src="js/owl.carousel.min.js"></script>
       <script src="js/custom.js"></script>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-   var Tawk_API = Tawk_API || {},
-     Tawk_LoadStart = new Date();
-   (function () {
-     var s1 = document.createElement("script"),
-       s0 = document.getElementsByTagName("script")[0];
-     s1.async = true;
-     s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
-     s1.charset = "UTF-8";
-     s1.setAttribute("crossorigin", "*");
-     s0.parentNode.insertBefore(s1, s0);
-   })();
- </script>
- <!--End of Tawk.to Script-->
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+         var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+         (function () {
+            var s1 = document.createElement("script"),
+               s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
+            s1.charset = "UTF-8";
+            s1.setAttribute("crossorigin", "*");
+            s0.parentNode.insertBefore(s1, s0);
+         })();
+      </script>
+      <!--End of Tawk.to Script-->
 </body>
 
 </html>
