--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -279,8 +279,8 @@
                                 <i class="fal fa-phone-alt"></i>
                             </div>
                             <div class="txt">
-                                <span>9953926020, </span>
-                                <span>8220888848</span>
+                                <span>9599598301, </span>
+                                <span>0124-4376471</span>
                             </div>
                         </div>
                     </div>
@@ -378,18 +378,18 @@
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {},
-          Tawk_LoadStart = new Date();
+            Tawk_LoadStart = new Date();
         (function () {
-          var s1 = document.createElement("script"),
-            s0 = document.getElementsByTagName("script")[0];
-          s1.async = true;
-          s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
-          s1.charset = "UTF-8";
-          s1.setAttribute("crossorigin", "*");
-          s0.parentNode.insertBefore(s1, s0);
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
+            s1.charset = "UTF-8";
+            s1.setAttribute("crossorigin", "*");
+            s0.parentNode.insertBefore(s1, s0);
         })();
-      </script>
-      <!--End of Tawk.to Script-->
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 </html>
