--- a/public/cybersecurity.html
+++ b/public/cybersecurity.html
@@ -45,8 +45,8 @@
                 <div class="header">
                     <a class="logo d-lg-none" href="index.html"><img src="logo.png" alt="" srcset=""></a>
                     <a href="#" class="d-lg-none" id="showsidenav"><img src="img/icon/letter-x.png" alt=""> </a>
-                    </div>
-                    <ul class="mb-0">
+                </div>
+                <ul class="mb-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
@@ -260,7 +260,7 @@
                                 </div>
                                 <div class="txt">
                                     <span>Plot-269, Udyog Vihar Phase-4, Gurgaon, Haryana-122015</span>
-                                 </div>
+                                </div>
                             </div>
                             <div class="icon-box">
                                 <div class="icon">
@@ -284,8 +284,8 @@
                                     <i class="fal fa-phone-alt"></i>
                                 </div>
                                 <div class="txt">
-                                    <span>9953926020, </span>
-                                    <span>8220888848</span>
+                                    <span>9599598301, </span>
+                                    <span>0124-4376471</span>
                                 </div>
                             </div>
                         </div>
@@ -335,21 +335,21 @@
         <!-- OWL CAROUSEL Plugin -->
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/custom.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API = Tawk_API || {},
-      Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"),
-        s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
-      s1.charset = "UTF-8";
-      s1.setAttribute("crossorigin", "*");
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API = Tawk_API || {},
+                Tawk_LoadStart = new Date();
+            (function () {
+                var s1 = document.createElement("script"),
+                    s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
+                s1.charset = "UTF-8";
+                s1.setAttribute("crossorigin", "*");
+                s0.parentNode.insertBefore(s1, s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
 
 </body>
 
