--- a/public/frontend-jd.html
+++ b/public/frontend-jd.html
@@ -252,7 +252,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                     <div class="footer-box">
-                        <a href="#" class="logo"><img src="logo.png" alt="" srcset=""></a>
+                        <a href="#" class="logo"><img src="./img/logoLight.png" alt="" srcset=""></a>
                         <p class="about">At iCLIMBS, we are your one-stop destination for comprehensive IT services
                             and
                             cutting-edge manpower solutions. With a commitment to excellence and innovation, we
