--- a/public/software.html
+++ b/public/software.html
@@ -40,10 +40,10 @@
 
     <nav id="navigration" class="navbar fixed-top p-0">
         <div class="container">
-            <a class="logo" href="index.html"><img src="logo.png" alt=""></a>
+            <a class="logo" href="index.html"><img src="./img/logoLight.png" alt=""></a>
             <div class="sidenav">
                 <div class="header">
-                    <a class="logo d-lg-none" href="index.html"><img src="logo.png" alt="" srcset=""></a>
+                    <a class="logo d-lg-none" href="index.html"><img src="./img/logoLight.png" alt="" srcset=""></a>
                     <a href="#" class="d-lg-none" id="showsidenav"><img src="img/icon/letter-x.png" alt=""> </a>
                     </div>
                     <ul class="mb-0">
@@ -175,7 +175,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <div class="footer-box">
-                            <a href="#" class="logo"><img src="logo.png" alt="" srcset=""></a>
+                            <a href="#" class="logo"><img src="./img/logoLight.png" alt="" srcset=""></a>
                             <p class="about">At iCLIMBS, we are your one-stop destination for comprehensive IT services
                                 and
                                 cutting-edge manpower solutions. With a commitment to excellence and innovation, we
