Contact Form is Currently Working

--- a/public/contact.html
+++ b/public/contact.html
@@ -255,7 +255,7 @@
       </div>
       <p class="para">Something went wrong. Please try again!</p>
       <form action="">
-        <a href="#" class="button" id="e_button">TRY AGAIN</a>
+        <a href="#" class="button" id="e_button" onclick="closefailurepopup()">TRY AGAIN LATER</a>
       </form>
     </div>
   </div>
