Popup Message in the form

--- a/public/contact.html
+++ b/public/contact.html
@@ -235,10 +235,14 @@
       <div class="imgbox">
         <img src="./img/checked.png" alt="" class="img">
       </div>
-      <div class="title">
+      <!-- <div class="title">
         <h3>Success!</h3>
+      </div> -->
+      <div class="msg">
+        <p class="para">Thank You</p>
+        <p class="message">We've received your message.</p>
+        <p class="message">Someone From Our Team will Contact You Soon</p>
       </div>
-      <p class="para">Your account has been created successfully</p>
       <form action="">
         <a href="#" class="button" id="s_button" onclick="closesuccesspopup()">OKAY</a>
       </form>
@@ -250,10 +254,13 @@
       <div class="imgbox">
         <img src="./img//cancel.png" alt="" class="img">
       </div>
-      <div class="title">
+      <!-- <div class="title">
         <h3>Sorry :(</h3>
+      </div> -->
+      <div class="msg">
+        <p class="para">Kindly Resubmit the Form</p>
+        <p class="message">So that someone From our team can contact you soon.</p>
       </div>
-      <p class="para">Something went wrong. Please try again!</p>
       <form action="">
         <a href="#" class="button" id="e_button" onclick="closefailurepopup()">TRY AGAIN LATER</a>
       </form>
